docs(nav): fix windows, only show y scrollbar when needed

--- a/docs/src/client/styles/directives/nav.less
+++ b/docs/src/client/styles/directives/nav.less
@@ -174,8 +174,8 @@ table {
 		}
 
 		.nav { // ul
-			max-height: 295px;
-			overflow-y: scroll;
+			max-height: 348px;
+			overflow-y: auto;
 			border-radius: @rd 0 @rd @rd;
 			#bg.nav.responsive.menu;
 			#borders.nav.responsive.menu;
